--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ está disminuye</p>
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='003' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/7Slim-Spain/success/index.html' />
   </form>
     </div>
   </div>
